# QtJsonSchema

./: CMakeLists.txt  QtJsonSchema.pro
lib/: CMakeLists.txt  QtJsonSchema.pri
lib/include/QtJsonSchema/: hashfunctions.h  jsonschema.h  jsonschema_p.h  jsonschemanodevalidator.h  jsonschemavalidationerror.h  referenceresolver.h
lib/src/: hashfunctions.cpp  jsonpointer.cpp  jsonschema.cpp  jsonschemanodevalidator.cpp  jsonschemanodevalidator07.cpp  jsonschemavalidationerror.cpp  referenceresolver.cpp  utils.cpp
test/: CMakeLists.txt  common.h  schemavalidationtest.cpp  test.pri
